# pyRISM

./: .gitignore  .lgtm.yml  .travis.yml  2  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  MANIFEST.in  Makefile  README.md  SPCE_DRISM_methane_UA.td  SPCE_DRISM_methane_UA.toml  adiis_full.diag  adiis_full.td  adiis_full.toml  cSPCE_DRISM.toml  cSPCE_DRISM_butane.td  cSPCE_DRISM_ethane.td  cSPCE_DRISM_methane.td  cSPCE_DRISM_methane.toml  cSPCE_DRISM_methane_rust.csv  cSPCE_DRISM_rust.csv  cSPCE_XRISM.td  cSPCE_XRISM.toml  cSPCE_XRISM_butane.td  cSPCE_XRISM_butane.toml  cSPCE_XRISM_ethene.td  cSPCE_XRISM_methane  cSPCE_XRISM_methane.td  cSPCE_XRISM_methane.toml  cSPCE_XRISM_methane_bin.td  cSPCE_XRISM_methane_bin.toml  cSPCE_XRISM_methane_preconv.toml  cSPCE_XRISM_methane_rust.csv  decane.td  expanded.txt  hexane.td  justfile  lmv_full.td  lmv_full.toml  (+15 more)
.cargo/: config.toml
.github/: CONTRIBUTING.md
.github/workflows/: joss-paper.yml  python-package.yml  rust.yml
data/: 003buta_12.toml  0507iso.toml  0521dic.toml  1.toml  HR1982.toml  HR1982_Br2_I.toml  HR1982_HCl_II.toml  MSPCE_XRISM_methane.toml  PK_ModelII.toml  cSPCE_DRISM_butane.toml  cSPCE_DRISM_ethane.toml  cSPCE_DRISM_octane.toml  cSPCE_DRISM_propane.toml  cSPCE_NaCl.toml  lmv_test.toml  org_solv.toml  performance_statistic.py  run_rism.py  toml_modifier.py
data/CM5/: 0008noc_chloro.toml  001tetr_1.toml  001tetr_1_maestro.toml  002eth.toml  003buta_12.toml  0111die.toml  0507iso.toml  0521dic.toml  118wate_488.toml
data/atomic/: 1.toml  argon.toml  argon_uv.toml
data/benchmark/: 1-chlorobutane.toml  1-chloroheptane.toml  1-chlorohexane.toml  1-chloropentane.toml  1-chloropropane.toml  11-dichloroethane.toml  11-dichloroethene.toml  111-trichloroethane.toml  1112-tetrachloroethane.toml  112-trichloroethane.toml  1122-tetrachloroethane.toml  12-dichlorobenzene.toml  12-dichloroethane.toml  12-dichloropropane.toml  12-dimethoxyethane.toml  12-ethanediol.toml  123-trichlorobenzene.toml  123-trimethylbenzene.toml  1234-tetrachlorobenzene.toml  1235-tetrachlorobenzene.toml  124-trichlorobenzene.toml  124-trimethylbenzene.toml  1245-tetrachlorobenzene.toml  13-dichlorobenzene.toml  13-dichloropropane.toml  135-trichlorobenzene.toml  135-trimethylbenzene.toml  14-dichlorobenzene.toml  14-dichloropentane.toml  2-butoxyethanol.toml  2-chloro-2-methylpropane.toml  2-chlorobutane.toml  2-chlorophenol.toml  2-chloropropane.toml  2-chlorotoluene.toml  2-ethoxyethanol.toml  2-ethyltoluene.toml  2-methoxyphenol.toml  2-methylbut-2-ene.toml  2-methylbuta-13-diene.toml  (+324 more)
data/benchmark_ADIIS/: solv103_mol316.toml  solv104_mol316.toml  solv105_mol15.toml  solv105_mol154.toml  solv105_mol174.toml  solv105_mol176.toml  solv105_mol18.toml  solv105_mol184.toml  solv105_mol23.toml  solv105_mol258.toml  solv105_mol305.toml  solv105_mol387.toml  solv105_mol42.toml  solv105_mol456.toml  solv105_mol50.toml  solv105_mol51.toml  solv105_mol561.toml  solv105_mol8.toml  solv105_mol90.toml  solv105_mol99.toml  solv109_mol107.toml  solv109_mol137.toml  solv109_mol32.toml  solv109_mol43.toml  solv109_mol52.toml  solv109_mol64.toml  solv109_mol65.toml  solv10_mol13.toml  solv110_mol12.toml  solv110_mol137.toml  solv110_mol140.toml  solv110_mol146.toml  solv110_mol147.toml  solv110_mol154.toml  solv110_mol164.toml  solv110_mol241.toml  solv110_mol36.toml  solv113_mol13.toml  solv113_mol38.toml  solv113_mol43.toml  (+330 more)
data/benchmark_MDIIS/: solv105_mol18.toml  solv105_mol184.toml  solv105_mol305.toml  solv105_mol456.toml  solv105_mol51.toml  solv105_mol8.toml  solv105_mol90.toml  solv109_mol137.toml  solv109_mol64.toml  solv110_mol140.toml  solv110_mol146.toml  solv113_mol13.toml  solv114_mol20.toml  solv114_mol45.toml  solv114_mol49.toml  solv117_mol48.toml  solv11_mol201.toml  (+85 more)
devtools/: README.md
docs/: Makefile  README.md  api.rst  conf.py  getting_started.rst  index.rst  make.bat  modules.rst  pyrism.Closures.rst  pyrism.Core.rst  pyrism.Functionals.rst  pyrism.IntegralEquations.rst  pyrism.Potentials.rst  pyrism.Solvers.rst  pyrism.rst  pyrism.tests.rst
examples/: 002dime_5_CM5.mol2  workflow.ipynb
libpyrism/: __init__.py  libpyrism.py  runner.py
paper/: paper.bib  paper.md
pyrism/: #rism_ctrl.py#  002eth_SFED.duv  003buta_12_SFED.duv  0521dic_SFED.duv  1.cuv  1.cvv  1.guv  1.guv_RDF.eps  1.gvv  1.tuv  1.tvv  1_SFED.duv  1_SFED.duv_RDF.eps  24dimepen_SFED.duv  2_propanol.cvv  2_propanol.guv_RDF.eps  2_propanol.gvv  2_propanol.tvv  2_propanol_SFED.duv  2_propanol_SFED.duv_RDF.eps  2_propanol_SFED_15.duv  2_propanol_SFED_15.duv_RDF.eps  Closure.py  Data.py  Grid.py  Methanol_lue.cvv  Methanol_lue.gvv  Methanol_lue.gvv_RDF.eps  Methanol_lue.tvv  Methanol_lue_SFED.duv  Methanol_wat.cuv  Methanol_wat.cvv  Methanol_wat.guv  Methanol_wat.guv_RDF.eps  Methanol_wat.gvv  Methanol_wat.gvv_RDF.eps  Methanol_wat.tuv  Methanol_wat.tvv  Methanol_wat_SFED.duv  Potential.py  (+63 more)
reference/: pyproject.toml  pyproject_maturin.toml  python-package.yml
src/: adiis.rs  closure.rs  controller.rs  data.rs  dipole.rs  driver.rs  drivers.rs  gillan.rs  grids.rs  iet.rs  input.rs  integralequation.rs  interactions.rs  io.rs  lib.rs  main.rs  mdiis.rs  ng.rs  operator.rs  picard.rs  potential.rs  pybindings.rs  quaternion.rs  solution.rs  solver.rs  solvers.rs  structure.rs  thermo.rs  thermodynamics.rs  transforms.rs  writer.rs  xrism.rs
tests/: system_tests.rs
(+9059 files in other folders)
