[package]
# `name` here is name of the package.
name = "pyrism"
# these are good defaults:
version = "0.2.0"
edition = "2021"

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "librism"

# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
fftw = { version = "0.8.0", features = ["system"] }
ndarray = { version = "0.15.6", features = ["approx-0_5", "rayon", "blas"] }
blas-src = { version = "0.8" }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
ndarray-linalg = { version = "0.16.0", features = ["openblas-system"] }
ndarray-rand = "0.14.0"
numpy = "0.19.0"
pyo3 = { version = "0.19.2", features = ["extension-module"] }
rustdct = "0.7.1"
log = "0.4.20"
env_logger = "0.10.0"
itertools = "0.11.0"
errorfunctions = "0.2.0"
approx = "0.5.1"
simple_logger = "4.2.0"
gnuplot = "0.0.39"
serde = { version = "1.0.189", features = ["derive"] }

[package.metadata.maturin]
python-source = "pyrism"
