[package]
# `name` here is name of the package.
name = "pyrism"
# these are good defaults:
version = "0.3.1"
edition = "2021"


[[bin]]
name = "rism"
path = "src/main.rs"

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "librism"

# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["lib", "cdylib"]

[features]
fftw-sys = ["fftw/system"]
openblas-static = ["openblas-src/static", "ndarray-linalg/openblas-static"]
default = []
dhat-on = []

[dependencies]
ndarray = { version = "0.15.6", features = ["approx-0_5", "rayon", "blas", "serde"] }
blas-src = { version = "0.8" }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
ndarray-linalg = { version = "0.16.0", features = ["openblas-system"] }
ndarray-rand = "0.14.0"
numpy = "0.19.0"
pyo3 = { version = "0.19.2", features = ["extension-module"] }
log = "0.4.20"
itertools = "0.11.0"
errorfunctions = "0.2.0"
approx = "0.5.1"
serde = { version = "1.0.189", features = ["derive"] }
bincode = "1.3.3"
toml = { version = "0.8.2", features = ["parse", "preserve_order"] }
lexopt = "0.3.0"
simple_logger = "4.2.0"
flate2 = "1.0.28"
time = "0.3.30"
csv = "1.3.0"
dhat = "0.3.2"
faer = { version = "0.14.1", features = ["ndarray"] }
GSL = "7.0.0"
tabled = "0.15.0"

[dev-dependencies]
ndarray = { version = "0.15.6", features = ["approx-0_5", "rayon", "serde"] }
ndarray-linalg = { version = "0.16.0" }

[dependencies.fftw]
version = "0.8.0"
default-features = false
features = ["source"]

[package.metadata.maturin]
python-source = "pyrism"

[profile.release]
codegen-units = 1
incremental = true
debug = false
lto = "fat"
opt-level = "z"
#panic = "abort"
strip = "debuginfo"
