[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyRISM"
version = "0.2.0"
dependencies = [
    "toml",
    "numpy",
    "scipy",
    "pandas",
    "numba",
    "matplotlib",
    "click",
]

[tool.setuptools.packages]
find = {}

[project.scripts]
pyrism = "pyrism.__main__:cli"