[build-system]
requires = ["setuptools", "maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pyRISM"
version = "0.2.0"
dependencies = [
    "toml",
    "numpy",
    "scipy",
    "pandas",
    "numba",
    "matplotlib",
    "click",
]

[tool.setuptools.packages]
find = {}

[project.scripts]
pyrism = "pyrism.__main__:cli"
pyrplot = "pyrism.plotter:plot"

[tool.maturin]
module-name = "pyrism.librism"
